# QuadMarcher

./: CMakeLists.txt  a.out  ecs.hpp  glad.cpp  hip_gl_interop.hip  hip_test.hip  main_ecs.cpp  octree.h
.cache/clangd/index/: main.cpp.14B46C9FB927F663.idx
src/: buffer.hpp  camera.hpp  color.hpp  geom.hpp  main.cpp  raymarching.hpp
